--- a/voting-app/public/index.html
+++ b/voting-app/public/index.html
@@ -10,6 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.css">
     <script src="./seed.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
